edited segmented buttons group

--- a/src/stories/components/ChecSegmentedButton.stories.mdx
+++ b/src/stories/components/ChecSegmentedButton.stories.mdx
@@ -32,11 +32,11 @@ import ChecSegmentedButton from '../../components/ChecSegmentedButton.vue';
       template: `
         <div class="flex justify-center font-lato uppercase mx-auto mx-auto p-16 bg-gray-100">
           <ChecSegmentedButton
-            :active="active"
             @click="click(option)"
+            :active="active"
           >
             {{option}}
-          </ChecSegmentedButton
+          </ChecSegmentedButton>
         </div>`
     }}
   </Story>
