- Make initial large label (placeholder) have left 16px padding like the designs, not 20 as it currently does, while allowing it to maintain the same left 16px of padding when scaled back down to a floating label Current - make label absolute along with ajdacent absolute password indicator to float over input

--- a/src/stories/components/TextField.stories.mdx
+++ b/src/stories/components/TextField.stories.mdx
@@ -118,7 +118,7 @@ import TextField from '../../components/TextField.vue';
           <TextField
             class="w-full max-w-sm"
             :label="label"
-            placeholder="Text Field Placeholder"
+            value="Disabled"
             variant="disabled"
           />
         </div>`,
@@ -175,7 +175,7 @@ import TextField from '../../components/TextField.vue';
           default: boolean('Show password strength', true),
         },
         passwordStrengthScore: {
-          default: select('Password strength', [ 0, 1, 2, 3, 4 ], 2)
+          default: select('Password strength', [null, 0, 1, 2, 3, 4 ], 3)
         }
       },
       components: {
