remove opionionated margin from chec-data-pill

--- a/src/stories/components/ChecDataPill.stories.mdx
+++ b/src/stories/components/ChecDataPill.stories.mdx
@@ -15,7 +15,7 @@ import ChecDataPill from '../../components/ChecDataPill';
         ChecDataPill,
       },
       template: `
-        <div class="mx-auto max-w-lg pt-6">
+        <div class="mx-auto max-w-lg pt-6 space-x-2">
           <ChecDataPill>Label</ChecDataPill>
           <ChecDataPill variant="news">News</ChecDataPill>
           <ChecDataPill variant="new">New</ChecDataPill>
