updating descriptions and comments

--- a/src/stories/components/BaseButton.stories.mdx
+++ b/src/stories/components/BaseButton.stories.mdx
@@ -163,10 +163,10 @@ This is a button modified using the Color and Variant props.
   </Story>
 </Preview>
 
-## Icon Only
+## Icon only
 
 <Preview>
-  <Story name="Icon Only" decorators={[withKnobs()]}>
+  <Story name="Icon only" decorators={[withKnobs()]}>
     {{
       components: {
         BaseButton,
