fixes bug where name and other attributes are not passed down

--- a/src/stories/components/TextField.stories.mdx
+++ b/src/stories/components/TextField.stories.mdx
@@ -43,6 +43,7 @@ import TextField from '../../components/TextField.vue';
       template: `
         <div class="py-16 flex justify-center">
           <TextField
+            name="input-name"
             :label="label"
             :multiline="multiline"
             placeholder="Example Placeholder"
@@ -88,6 +89,7 @@ import TextField from '../../components/TextField.vue';
       template: `
         <div class="py-16 flex justify-center">
           <TextField
+            name="input-name"
             :label="label"
             :multiline="multiline"
             placeholder="Example Placeholder"
@@ -116,6 +118,7 @@ import TextField from '../../components/TextField.vue';
       template: `
         <div class="py-16 flex justify-center">
           <TextField
+            name="input-name"
             class="w-full max-w-sm"
             :label="label"
             placeholder="Text Field Placeholder"
@@ -145,6 +148,7 @@ import TextField from '../../components/TextField.vue';
       template: `
         <div class="py-16 flex justify-center">
           <TextField
+            name="input-name"
             :label="label"
             class="w-full max-w-sm"
             placeholder="Text Field Placeholder"
@@ -175,6 +179,7 @@ import TextField from '../../components/TextField.vue';
       template: `
         <div class="py-16 flex justify-center">
           <TextField
+            name="password"
             :label="label"
             class="w-full max-w-sm"
             v-model="inputValue"
