--- a/src/stories/components/TextField.stories.mdx
+++ b/src/stories/components/TextField.stories.mdx
@@ -196,7 +196,7 @@ import ChecSwitch from '../../components/ChecSwitch.vue';
 # Utilising right slot
 
 <Preview>
-  <Story name="Right Slot">
+  <Story name="Right slot">
     {{
       components: {
         TextField,
