Simplify storybook knob label

--- a/src/stories/components/ChecSegmentedButton.stories.mdx
+++ b/src/stories/components/ChecSegmentedButton.stories.mdx
@@ -24,7 +24,7 @@ import ChecSegmentedButton from '../../components/ChecSegmentedButton.vue';
           default: () => boolean('Disabled', false),
         },
         active: {
-          default: boolean('Set as Active', false)
+          default: boolean('Active', false)
         },
       },
       data() {
@@ -48,4 +48,3 @@ import ChecSegmentedButton from '../../components/ChecSegmentedButton.vue';
     }}
   </Story>
 </Preview>
-
