--- a/src/stories/components/ChecCard.stories.mdx
+++ b/src/stories/components/ChecCard.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import { action } from '@storybook/addon-actions';
-import { select } from '@storybook/addon-knobs';
+import { boolean, select } from '@storybook/addon-knobs';
 import ChecCard from '../../components/ChecCard.vue';
 import ChecIcon from '../../components/ChecIcon.vue';
 import TextField from '../../components/TextField.vue';
@@ -11,8 +11,6 @@ import TextField from '../../components/TextField.vue';
 
 <Props of={ChecCard} />
 
-# Default
-
 <Preview>
   <Story name="Default">
     {{
@@ -20,13 +18,16 @@ import TextField from '../../components/TextField.vue';
         ChecCard
       },
       props: {
-        variant: {
-          default: select('Variant', ['bordered', 'borderless', 'border-vertical', 'border-horizontal']),
+        borders: {
+          default: select('Borders', ['full', 'none', 'vertical', 'horizontal']),
+        },
+        compact: {
+          default: boolean('Compact')
         },
       },
       template: `
         <div class="p-16 flex justify-center w-full bg-gray-100">
-          <ChecCard :variant="variant" class="w-40 h-40">
+          <ChecCard :borders="borders" :compact="compact" class="w-40 h-40">
             <p class="self-center mx-auto">Nothing here</p>
           </ChecCard>
         </div>`
@@ -34,15 +35,40 @@ import TextField from '../../components/TextField.vue';
   </Story>
 </Preview>
 
+## Border options
+
 <Preview>
-  <Story name="Borderless">
+  <Story name="Border options">
     {{
       components: {
-        ChecCard,
+        ChecCard
+      },
+      data() {
+        return {
+          borders: ['full', 'none', 'vertical', 'horizontal'],
+        };
+      },
+      template: `
+        <div class="p-16 flex flex-col justify-between items-center w-full bg-gray-100 space-y-4">
+          <ChecCard v-for="border in borders" :borders="border" class="w-1/2 h-40 text-center">
+            <code class="text-center">borders="{{ border }}"</code>
+          </ChecCard>
+        </div>`
+    }}
+  </Story>
+</Preview>
+
+## Compact
+
+<Preview>
+  <Story name="Compact">
+    {{
+      components: {
+        ChecCard
       },
       template: `
         <div class="p-16 flex justify-center w-full bg-gray-100">
-          <ChecCard :variant="'borderless'" class="w-40 h-40">
+          <ChecCard borders="full" compact class="w-40 h-40">
             <p class="self-center mx-auto">Nothing here</p>
           </ChecCard>
         </div>`
@@ -50,21 +76,7 @@ import TextField from '../../components/TextField.vue';
   </Story>
 </Preview>
 
-<Preview>
-  <Story name="Border Top & Bottom">
-    {{
-      components: {
-        ChecCard,
-      },
-      template: `
-        <div class="p-16 flex justify-center w-full bg-gray-100">
-          <ChecCard :variant="'border-vertical'" class="w-40 h-40">
-            <p class="self-center mx-auto">Nothing here</p>
-          </ChecCard>
-        </div>`
-    }}
-  </Story>
-</Preview>
+## With content
 
 <Preview>
   <Story name="With inner elements">
@@ -74,14 +86,14 @@ import TextField from '../../components/TextField.vue';
         TextField,
       },
       props: {
-        variant: {
-          default: select('Variant', ['bordered', 'borderless', 'border-vertical', 'border-horizontal']),
+        borders: {
+          default: select('Borders', ['full', 'none', 'vertical', 'horizontal']),
         },
       },
       template: `
         <div class="p-16 flex justify-center w-full font-lato">
           <ChecCard
-            :variant="variant"
+            :borders="borders"
             class="w-full max-w-lg"
             tailwind="bg-gray-100"
           >
@@ -109,6 +121,8 @@ import TextField from '../../components/TextField.vue';
   </Story>
 </Preview>
 
+## "Custom" card
+
 <Preview>
   <Story name="Fancy overlay">
     {{
@@ -120,7 +134,7 @@ import TextField from '../../components/TextField.vue';
       template: `
         <div class="p-16 flex justify-center w-full font-lato">
           <ChecCard
-            variant="borderless"
+            borders="none"
             class="text-white w-full max-w-lg"
             tailwind="bg-primary-gradient"
           >
