add strength indicator to password-field

--- a/src/stories/components/PasswordField.stories.mdx
+++ b/src/stories/components/PasswordField.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
-import { text } from '@storybook/addon-knobs';
+import { text, select, boolean } from '@storybook/addon-knobs';
 import PasswordField from '../../components/PasswordField.vue';
 
 <Meta title="Form fields/Password field" component={PasswordField} />
@@ -23,17 +23,25 @@ button, toggling between cleartext and password view.
         label: {
           default: text('Label', 'Label')
         },
+        showPasswordStrength: {
+          default: boolean('Show password strength', true)
+        },
+        passwordStrengthScore: {
+          default: select('Password strength', [null, 0, 1, 2, 3, 4 ], 3)
+        },
       },
       components: {
         PasswordField
       },
       template: `
-        <div class="py-16 flex justify-center">
+        <div class="py-16">
           <PasswordField
             name="password"
             :label="label"
-            class="w-full max-w-sm"
+            class="w-full max-w-sm mx-auto"
             v-model="inputValue"
+            :showPasswordStrength="showPasswordStrength"
+            :passwordStrengthScore="passwordStrengthScore"
           />
         </div>`,
     }}
